--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,13 @@
 	border:none;
 	list-style: none;
 	text-decoration: none;
-	color: rgba(120,120,120);
+	color: rgba(120,120,120)
+	/*Transisitons */
+	-webkit-transition: all 800ms ease-in-out;
+	-moz-transition: all 800ms ease-in-out;
+	-ms-transition: all 800ms ease-in-out;
+	-o-transition: all 800ms ease-in-out;
+	transition: all 800ms ease-in-out;
 }
 /*####### Style___logo-header ########*/
 .logo-header{
@@ -104,49 +110,92 @@ h2,p>a{
 }
 
 /*####### Style___footer ########*/
-footer{
+footer.container, footer.container-fluid{
 	display: flex;
- 	align-items: stretch;
+	flex-direction: column;
+	justify-content: flex-end;
+	margin-top: 50px;
+	padding: 30px 0;
+	box-sizing: border-box;
+	border-top:2px solid #f86500;
+}
+#sucursales{
 	width: 100%;
 }
-footer > button{
-  width: 30px;
-  border: none;
-  color: black;
-  font-size: 40px;
-  text-align: center;
-  outline: none;
-  
-  &:hover{
-    opacity: 1;
-  }
-}
-.sucursales{
-	flex: 1;
-  	overflow: hidden;
-}
-.sucursal{
-	list-style-type: none;
-	white-space: nowrap;
-	font-size: 0;
-	line-height: 0;
-	transition: transform 1s ease-in-out;
-}
-.infoSucursal{
-	padding: 30px 20px;
-	display: inline-block;
-	width: 100%;
-	height: 250px;
-	font-size: 25px;
-	letter-spacing: -0.03em;
+.carousel-item p{
+	text-align: center;
 	line-height: 1;
-	font-weight: bold;
-	box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
-	  
-	&:nth-child(2) {
-	  color: #fff;
-  }
+	font-size: 18px;
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon{
+	background-image: url(../img/flecha.png);
+	background-size: 25px 25px;
+}
+.carousel-control-next-icon{
+	-moz-transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	-o-transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	transform: rotate(180deg);
 }
 .nombreDeSucursal{
 	color: #f86500;
+	font-weight: bold;
+}
+
+/*####### Style___@media_query ########*/
+
+@media screen and (max-width: 1200px) {
+	.welcome .pregunta p {
+	    font-size: 15px;
+	}
+}
+@media screen and (min-width:900px) and (max-width: 991px) {
+	
+	.container {
+	    max-width: 820px;
+	}
+}
+@media screen and (max-width: 991px) {
+	.home h2{
+		font-size: 26px;
+	}
+	.shop .card-deck .card .card-body .card-title {
+	    font-size: 12px;
+		font-weight: 600;
+	}
+}
+@media screen and (max-width: 767px) {
+	.shop .card-deck {
+	    flex-direction: column;
+	    flex-wrap: wrap;
+	    align-items: center;
+	    justify-content: space-between;
+	    height: 400px;
+	}
+	.shop .card-deck .card:nth-child(even){
+		margin-top: 20px;
+	}
+}
+
+@media screen and (max-width: 575px) {
+	.shop .card-deck {
+		flex-direction: row;
+		height: auto;
+	}
+	.shop .card-deck .card{
+		margin-left: 0px;
+		margin-right: 5px;
+	}
+	
+	.shop .card-deck .card:nth-child(even){
+		margin-top: 0;
+		margin-left: 5px;
+		margin-right: 0px;
+	}
+	.carousel-control-prev-icon,
+	.carousel-control-next-icon{
+		display: none;
+	}
 }
